src/OpenCvSharpExtern/gpu.h

CVAPI(int) gpu_getCudaEnabledDeviceCount()
{
	return cv::gpu::getCudaEnabledDeviceCount();
}
CVAPI(void) gpu_setDevice(int device)
{
	cv::gpu::setDevice(device);
}
CVAPI(int) gpu_getDevice()
{
	return cv::gpu::getDevice();
}